--- a/demo/simple_plants/params.yml
+++ b/demo/simple_plants/params.yml
@@ -9,12 +9,16 @@
 ######################
 #BASICS###############
 ######################
+#!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
+#ALTER EVERYTHING IN THIS SECTION!!!!!!!!!!!!!!!!!!
+!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
 #Species list
 species: /home/will/Code/phyloGenerator2/demo/species.txt
+# - or, for more fun, try 'leipzig', which is a longer list of species names
 #Output directry (must aready exist)
-working_dir: /some/directory/that/exists/
+working_dir: /home/will/test
 #Email address for downloads
-email: will.pearse@gmail.com
+email: your@name.com
 
 ######################
 #DNA DOWNLOAD#########
@@ -47,6 +51,9 @@ genes:
 phy_method: examl
 phy_method: raxml
 #phy_method: exabayes
+#If you have additional parameters to pass to your phylogeny program, do so below
+#phy_params: -N 100 #Do 100 random restarts (RAxML)
+#phy_params: -f a -N 1000 -x 123456 #Do 1000 rapid bootsrap searches, using random number seed 123456 (RAxML) - note that passing $RANDOM should produce a random number on a UNIX machine
 #Whether to perform secondary check of sequences
 #hawkeye: true
 #Constraint tree
